# Jwu

./: README.md  pyproject.toml
src/jwu/: __init__.py  skills_install.py
src/jwu/cli/: copy_modal.py  dashboard.py  main.py
src/jwu/core/: clipboard.py  config.py  dates.py  jira.py  models.py  service.py  store.py
src/jwu/skills/jwu-4test-message/: SKILL.md
src/jwu/skills/jwu-commit-message/: SKILL.md
src/jwu/skills/jwu-job-review/: SKILL.md
src/jwu/skills/jwu-start-job/: SKILL.md
tests/: fixtures.py  test_cli.py  test_clients.py  test_config.py  test_dashboard.py  test_models.py  test_service.py  test_store.py
